--- a/package.json
+++ b/package.json
@@ -1,24 +1,24 @@
 {
-  "name": "homebridge-wyze-smart-home",
+  "name": "homebridge-wyze-smart-home-justoy",
   "version": "0.5.47",
-  "description": "Wyze Smart Home plugin for Homebridge",
+  "description": "Wyze Smart Home plugin for Homebridge with code from justoy",
   "license": "MIT",
   "main": "src/index.js",
   "scripts": {
-    "lint": "eslint src/**.js --max-warnings=0",
+    "lint": "eslint src/**.js --max-warnings=0"
   },
   "keywords": [
     "homebridge-plugin",
     "Wyze",
     "Hoobs"
   ],
-  "homepage": "http://github.com/jfarmer08/homebridge-wyze-smart-home",
+  "homepage": "https://github.com/justoy/homebridge-wyze-smart-home",
   "repository": {
     "type": "git",
-    "url": "git://github.com/jfarmer08/homebridge-wyze-smart-home.git"
+    "url": "git://github.com/justoy/homebridge-wyze-smart-home.git"
   },
   "bugs": {
-    "url": "http://github.com/jfarmer08/homebridge-wyze-smart-home/issues"
+    "url": "http://github.com/justoy/homebridge-wyze-smart-home/issues"
   },
   "engines": {
     "homebridge": "^1.6.0 || ^2.0.0-beta.0",
@@ -47,19 +47,5 @@
     "eslint": "^8.17.0",
     "eslint-config-standard": "^17.0.0",
     "homebridge": "^2.0.0-beta.0"
-  },
-  "funding": [
-    {
-      "type": "paypal",
-      "url": "https://paypal.me/AllenFarmer"
-    },
-    {
-      "type": "venmo",
-      "url": "https://venmo.com/u/Allen-Farmer"
-    },
-    {
-      "type": "cashApp",
-      "url": "https://cash.app/$Jfamer08"
-    }
-  ]
+  }
 }
